2006-04-07  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Change default key-binding to F11.
	(scaleInitiate): Make sure screen isn't grabbed by some other plugin.
	(scaleInitScreen): Initialize darkenBack properly.

	* configure.ac: Bump version to 0.0.9.

	* plugins/Makefile.am (CLEANFILES, EXTRA_DIST): Fix.

	* plugins/rotate.c (ROTATE_SPEED_DEFAULT): 1.5.

2006-04-07  Dan Winship  <danw@novell.com>

	(Much of this patch was written by Radek Doulik
	<rodo@novell.com>.)

	* src/display.c:
	* src/event.c:
	* src/screen.c: Move keybinding stuff to CompDisplay, making it no
	longer settable per-screen. Add bindings for screenshots (for
	compatibility with metacity, which handles that keybinding in
	GNOME for historical reasons).

	* include/compiz.h: add an explicit CompBindingTypeNone rather
	than relying on modifiers==0 to mean none. Update bindings stuff.

	* src/screen.c (removePassiveKeyGrab, removePassiveButtonGrab):
	Fix these to remove the right grab rather than always removing the
	most-recently-added one.
	(addScreenBinding): deal with CompBindingTypeNone

	* plugins/gconf-dump.c: hacky plugin to dump information about the
	other plugins to a gconf schemas file (used to regenerate
	compiz.schemas)

	* plugins/gconf-compiz-utils.c: shared code between gconf.c and
	gconf-dump.c

	* plugins/Makefile.am: add gconf-dump plugin and compiz.schemas,
	and code to install compiz.schemas.

	* configure.ac: Update gconf test to set macros needed for schema
	install.

2006-04-07  David Reveman  <davidr@novell.com>

	* plugins/rotate.c: Add edge flipping support.

	* plugins/scale.c: Allow corner screen edges to be used for
	initiating scale mode.

	* src/option.c (compSetBoolOption): Only return TRUE if value changed.

	* src/screen.c:
	* src/window.c:
	* plugins/minimize.c:
	* plugins/decoration.c:
	* include/compiz.h: Add immediate argument to MoveNotify, immediate
	means that any animations should be avoided.

	* src/screen.c:
	* plugins/water.c: